template.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Generic AWS CloudFormation Template

Parameters:
  Stage:
    Type: String
    Default: dev
    Description: Environment name (e.g., dev, test, prod)
  
  ImageUrl:
    Type: String
    Description: Image url for the app
  
  NginxImageUrl:
    Type: String
    Description: Image url for the nginx container
  
  ContainerPort:
    Type: Number
    Default: 80

  ContainerCpu:
    Type: Number
    Default: 1024
    Description: How much CPU for the container
  
  ContainerMemory:
    Type: Number
    Default: 2048
    Description: Memory for the container
  
  DefaultVpc:
    Type: String
    Description: Default VPC Id
  
  PublicSubnets:
    Type: List<AWS::EC2::Subnet::Id>
    Description: Default public subnets

Resources:
  ScrapperTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub dvst-knwldge-scrapper-task-role-${AWS::Region}
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ScrapperTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: nginx-scrapper-task
      RequiresCompatibilities:
        - FARGATE
      Cpu: !Ref ContainerCpu
      Memory: !Ref ContainerMemory
      NetworkMode: awsvpc
      ExecutionRoleArn: a
      ContainerDefinitions:
        - Name: nginx
          Image: !Ref NginxImageUrl
          PortMappings:
            - ContainerPort: 80
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: /ecs/nginx
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: nginx
          DependsOn:
            - ContainerName: scrapper
              Condition: Start
        - Name: scrapper
          Image: !Ref ImageUrl
          PortMappings: 
            - ContainerPort: 3000
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: /ecs/scrapper
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: scrapper

  ## ALB Definition
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic to ALB
      VpcId: !Ref DefaultVpc
      SecurityGroupIngess:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  ServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic from ALB to service
      VpcId: !Ref DefaultVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  ScrapperALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub dvst-knwldge-scrapper-alb-${AWS::Region}
      Scheme: internet-facing
      Subnets: !Ref PublicSubnets
      SecurityGroups:
        - !Ref ALBSecurityGroup
    
  ScrapperALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub scrapper-alb-tgt-grpus-${AWS::Region}
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId: !Ref DefaultVpc
      HealthCheckPath: /health
      HealthCheckIntervalSeconds: 15
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
    
  ScrapperALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ScrapperALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ScrapperALBTargetGroup
  ### ECS
  ScrapperECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub dvst-knwldge-scrapper-ecs-cluster-${AWS::Region}
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
  ScrapperECSService:
    Type: AWS::ECS::Service
    DependsOn:
      - ScrapperALBListener
    Properties:
      Cluster: !Ref ScrapperECSCluster
      LaunchType: FARGATE
      DesiredCount: 1
      TaskDefinition: !Ref ScrapperTaskDefinition
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref ServiceSecurityGroup
      LoadBalancers:
        - ContainerName: ngnix
          ContainerPort: 80
          TargetGroupArn: !Ref ScrapperALBTargetGroup
# Outputs:
